[package]
name = "v2fs-vsqlite"
version = "0.1.0"
authors = ["Haixing Wang <hxwang@comp.hkbu.edu.hk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
blake2b_simd = "0.5"
csv = "1.1.6"
derive_more = "0.99"
hex = "0.4"
howlong = "0.1.7"
libsqlite3-sys = { version = "0.23", features = ["bundled"] }
lru = "0.7.7"
rand = "0.8"
regex = "1"
rocksdb = "0.16"
rusqlite = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.6", features = ["serde"] }
structopt = "0.3"
time = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
zipf = "7.0.0"

