[package]
name = "app"
version = "1.0.0"
build = "build.rs"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
howlong = "0.1.7"
merkle_tree = { path = "../merkle_tree" }
postcard = { version = "0.7.3", features = ["alloc"] }
rand = "0.8"
rocksdb = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
structopt = "0.3"
time = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
vfs_common = { path = "../vfs_common" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
sgx_urts = { path = "../rust-sgx-sdk/sgx_urts" }

[build-dependencies]
cc = "1.0"
bindgen = "0.59"