[package]
name = "hashlink"
version = "0.8.1"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "HashMap-like containers that hold their key-value pairs in a user controllable order"
repository = "https://github.com/kyren/hashlink"
documentation = "https://docs.rs/hashlink"
readme = "README.md"
keywords = ["data-structures"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "kyren/hashlink", branch = "master" }


[dependencies]
sgx_libc = { path = "../rust-sgx-sdk/sgx_libc" }
sgx_tstd = { path = "../rust-sgx-sdk/sgx_tstd" }
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
hashbrown = { version = "0.12.0", default-features = false, features = ["nightly"] }

